bluetooth: remove duplicate histograming of request device.

BUG=598120

Review URL: https://codereview.chromium.org/1843643002

Cr-Commit-Position: refs/heads/master@{#383766}

Former-commit-id: d2c5f54b9da878b08150552525e0a6228d8045cd